# arbitrage-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  config.py  database.py  engine.py  explainer.py  main.py  models.py  regime.py  requirements.txt
backend/ml/: classifier.py
backend/rust-engine/: Cargo.toml
backend/rust-engine/src/: detector.rs  feed.rs  ffi.rs  lib.rs  main.rs  models.rs
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  i18n.ts  layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/opportunities/: page.tsx
frontend/components/: dashboard.tsx  loading-screen.tsx  ml-prediction-insights.tsx  regime-indicator.tsx  risk-management-panel.tsx  sidebar.tsx  simulation-status-banner.tsx  status-cards.tsx  strategy-controls.tsx  trade-execution-feedback.tsx  trade-status-badge.tsx
frontend/components/charts/: performance-chart.tsx
frontend/components/tables/: arbitrage-opportunities-table.tsx  trade-history-table.tsx
frontend/components/ui/: sidebar.tsx
